--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "custom-env": "^1.0.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
