--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
@@ -11,7 +10,8 @@
     "react-dom": "^16.11.0",
     "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,7 +35,10 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "jest": "^24.9.0",
-    "react-router-dom": "^5.1.2"
+    "react-cookie": "^4.0.1",
+    "react-router-dom": "^5.1.2",
+    "universal-cookie": "^4.0.2"
   }
 }
