--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "client-install": "npm install --prefix client",
     "start": "node app.js",
-    "server": "nodemon app.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-},
-
-
-    "dependencies": {
+    "server": "nodemon app.js"
+  },
+  "dependencies": {
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "custom-env": "^1.0.2",
     "debug": "~2.6.9",
@@ -23,6 +17,7 @@
     "helmet": "^3.21.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.0",
     "morgan": "^1.9.1",
     "pg": "^7.12.1"
