--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "axios": "^0.19.0",
+    "jest": "^24.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
