--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.0",
     "morgan": "^1.9.1",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "nodemon": "^1.19.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
