--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "jest": "^24.9.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-csv": "^1.1.1",
     "react-dom": "^16.11.0",
     "react-router": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "reactstrap": "^8.1.1",
     "react-router-dom": "^5.1.2",
-    "axios": "^0.19.0",
-    "jest": "^24.9.0"
+    "react-scripts": "3.2.0",
+    "react-star-rating-component": "^1.4.1",
+    "react-star-rating-controlled-component": "^1.0.1",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
