--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "jest": "^24.9.0",
     "react-addons-test-utils": "^15.6.2",
     "react-cookie": "^4.0.1",
+    "react-docgen": "^4.1.1",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.12.0",
     "universal-cookie": "^4.0.2"
